Updated page TechDraw Dimension/fr

--- a/wiki/fr/TechDraw_Dimension.html
+++ b/wiki/fr/TechDraw_Dimension.html
@@ -1,18 +1,16 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Dimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Dimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Ma&szlig; (60% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Ma&szlig; (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_Dimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Dimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quotatura (60% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="Rysunek Techniczny: Wstaw wymiar (60% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw wymiar (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#52824;&#49688; (40% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_StackDown.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_StackDown.html" title="TechDraw StackDown/fr">Empiler vers le bas</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_SpreadsheetView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/fr">Vue d'un objet Spreadsheet</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/fr">Cote de longueur</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
@@ -85,14 +83,12 @@
 <ul><li>Pour le moment, l'outil ne peut g&eacute;rer que les r&eacute;f&eacute;rences 2D (g&eacute;om&eacute;trie s&eacute;lectionn&eacute;e dans le dessin).</li></ul>
 <p><br>
 </p>
-<div class="mw-translate-fuzzy">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_StackDown.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_StackDown.html" title="TechDraw StackDown/fr">Empiler vers le bas</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_SpreadsheetView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_SpreadsheetView.html" title="TechDraw SpreadsheetView/fr">Vue d'un objet Spreadsheet</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_LengthDimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_LengthDimension.html" title="TechDraw LengthDimension/fr">Cote de longueur</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=Workbench_TechDraw.svg&amp;filetimestamp=20240713144548&amp;.html" class="mw-file-description"><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">TechDraw</a>
@@ -109,7 +105,7 @@
 <hr>
 <ul><li><b>Extensions&nbsp;:</b>
 <ul><li><b>Attributs et modifications&nbsp;:</b> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>, <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>, <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">Prolonger</a>, <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">Raccourcir</a>, <a href="../fr/TechDraw_ExtensionLockUnlockView.html" title="TechDraw ExtensionLockUnlockView/fr">Verrouiller/d&eacute;verrouiller</a>, <a href="../fr/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/fr">Positionner une vue en coupe</a>, Aligner (<a href="../fr/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/fr">horizontalement</a> -  <a href="../fr/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/fr">verticalement</a> - <a href="../fr/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/fr">obliquemement</a>), Cascade (<a href="../fr/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/fr">horizontale</a> - <a href="../fr/TechDraw_ExtensionCascadeVertDimension.html" title="TechDraw ExtensionCascadeVertDimension/fr">verticale</a> - <a href="../fr/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/fr">inclin&eacute;e</a>), <a href="../fr/TechDraw_ExtensionAreaAnnotation.html" title="TechDraw ExtensionAreaAnnotation/fr">Calculer l'aire des faces s&eacute;lectionn&eacute;es</a>, <a href="../fr/TechDraw_ExtensionArcLengthAnnotation.html" title="TechDraw ExtensionArcLengthAnnotation/fr">Longueur d'arc d'ar&ecirc;tes s&eacute;lectionn&eacute;es</a>,  <a href="../fr/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/fr">Personnaliser le format d'infobulle</a></li>
-<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersection de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
+<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersections cosm&eacute;tiques de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
 <li><b>Cotes&nbsp;:</b> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre '&#8960;'</a>, <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube '&#12348;'</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Ins&eacute;rer le pr&eacute;fixe "n&times;"</a>,  <a href="../fr/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/fr">Supprimer les symboles</a>, D&eacute;cimales (<a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">en plus</a> - <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">en moins</a>)</li></ul></li></ul>
 <hr>
 <ul><li><b>Divers&nbsp;:</b> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer l'objet cosm&eacute;tique</a></li></ul>
@@ -132,34 +128,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110195959
+Cached time: 20260124103513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.224 seconds
-Preprocessor visited node count: 375/1000000
-Post&#8208;expand include size: 26158/2097152 bytes
-Template argument size: 10168/2097152 bytes
+CPU time usage: 0.101 seconds
+Real time usage: 0.130 seconds
+Preprocessor visited node count: 373/1000000
+Post&#8208;expand include size: 26300/2097152 bytes
+Template argument size: 10258/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1339/5000000 bytes
+Unstrip post&#8208;expand size: 1352/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.976      1 -total
- 50.35%   25.667      1 Template:Userdocnavi/fr
- 31.00%   15.804      2 Template:Navigation_menu_2
- 21.85%   11.137      1 Template:TechDraw_Tools_navi/fr
- 10.04%    5.120      1 Template:GuiCommand/fr
-  6.77%    3.449      1 Template:MenuCommand
-  5.83%    2.971      4 Template:KEY
-  4.40%    2.245      1 Template:Button
-  4.36%    2.224      2 Template:Docnav/fr
+100.00%   15.735      1 -total
+ 32.57%    5.124      1 Template:TechDraw_Tools_navi/fr
+ 30.56%    4.809      2 Template:Navigation_menu_2
+ 19.38%    3.049      1 Template:GuiCommand/fr
+ 18.68%    2.939      1 Template:Userdocnavi/fr
+ 13.49%    2.123      2 Template:Docnav/fr
+  6.44%    1.013      4 Template:KEY
+  5.72%    0.900      1 Template:MenuCommand
+  5.36%    0.844      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260110195959 and revision id 1731800. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260124103513 and revision id 1743275. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
