--- a/wiki/fr/TechDraw_Dimension.html
+++ b/wiki/fr/TechDraw_Dimension.html
@@ -132,8 +132,8 @@ Cached time: 20260124103513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.101 seconds
-Real time usage: 0.130 seconds
+CPU time usage: 0.085 seconds
+Real time usage: 0.214 seconds
 Preprocessor visited node count: 373/1000000
 Post&#8208;expand include size: 26300/2097152 bytes
 Template argument size: 10258/2097152 bytes
@@ -144,18 +144,18 @@ Unstrip post&#8208;expand size: 1352/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.735      1 -total
- 32.57%    5.124      1 Template:TechDraw_Tools_navi/fr
- 30.56%    4.809      2 Template:Navigation_menu_2
- 19.38%    3.049      1 Template:GuiCommand/fr
- 18.68%    2.939      1 Template:Userdocnavi/fr
- 13.49%    2.123      2 Template:Docnav/fr
-  6.44%    1.013      4 Template:KEY
-  5.72%    0.900      1 Template:MenuCommand
-  5.36%    0.844      1 Template:Button
+100.00%   64.486      1 -total
+ 35.02%   22.580      1 Template:GuiCommand/fr
+ 30.63%   19.755      1 Template:TechDraw_Tools_navi/fr
+ 11.92%    7.687      2 Template:Navigation_menu_2
+ 10.66%    6.873      4 Template:KEY
+ 10.36%    6.681      2 Template:Docnav/fr
+  8.49%    5.472      1 Template:Userdocnavi/fr
+  7.30%    4.706      1 Template:MenuCommand
+  6.80%    4.385      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260124103513 and revision id 1743275. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260124103513 and revision id 1743275. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
