Updated page TechDraw Dimension/fr

--- a/wiki/fr/TechDraw_Dimension.html
+++ b/wiki/fr/TechDraw_Dimension.html
@@ -12,7 +12,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -23,7 +22,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Cotes &rarr; Ins&eacute;rer une cote
+<td class="ctEven">TechDraw &rarr; Cotes &rarr; Cote
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -52,7 +51,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Cote</b> est l'&eacute;quivalent TechDraw de l'outil <a href="../fr/Sketcher_Dimension.html" title="Sketcher Dimension/fr">Sketcher Dimension</a>. Il offre un dimensionnement contextuel et peut donc remplacer la plupart des autres <a href="../fr/TechDraw_Workbench.html#Cotes" title="TechDraw Workbench/fr">outils de cote</a>.
 </p><p><span id="Usage"></span>
@@ -128,15 +126,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124103513
+Cached time: 20260124103815
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.214 seconds
-Preprocessor visited node count: 373/1000000
-Post&#8208;expand include size: 26300/2097152 bytes
-Template argument size: 10258/2097152 bytes
+CPU time usage: 0.081 seconds
+Real time usage: 0.113 seconds
+Preprocessor visited node count: 372/1000000
+Post&#8208;expand include size: 26274/2097152 bytes
+Template argument size: 10232/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -144,18 +142,18 @@ Unstrip post&#8208;expand size: 1352/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.486      1 -total
- 35.02%   22.580      1 Template:GuiCommand/fr
- 30.63%   19.755      1 Template:TechDraw_Tools_navi/fr
- 11.92%    7.687      2 Template:Navigation_menu_2
- 10.66%    6.873      4 Template:KEY
- 10.36%    6.681      2 Template:Docnav/fr
-  8.49%    5.472      1 Template:Userdocnavi/fr
-  7.30%    4.706      1 Template:MenuCommand
-  6.80%    4.385      1 Template:Button
+100.00%   26.174      1 -total
+ 30.05%    7.866      1 Template:TechDraw_Tools_navi/fr
+ 26.03%    6.814      2 Template:Navigation_menu_2
+ 22.32%    5.841      1 Template:GuiCommand/fr
+ 17.20%    4.503      1 Template:Userdocnavi/fr
+ 10.08%    2.639      2 Template:Docnav/fr
+  9.07%    2.373      1 Template:MenuCommand
+  8.01%    2.096      1 Template:Button
+  7.66%    2.005      4 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260124103513 and revision id 1743275. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260124103815 and revision id 1743277. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
