Updated page TechDraw Dimension/fr

--- a/wiki/fr/TechDraw_Dimension.html
+++ b/wiki/fr/TechDraw_Dimension.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw Dimension/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+Dimension&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Ma&szlig; (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_Dimension.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw Dimension (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Quotatura (60% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw wymiar (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ko/TechDraw_Dimension.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#52824;&#49688; (40% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -56,11 +56,10 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Pr&eacute;s&eacute;lectionner &eacute;ventuellement certains &eacute;l&eacute;ments g&eacute;om&eacute;triques (sommets, ar&ecirc;tes ou faces).</li>
+<ol><li>Vous pouvez pr&eacute;s&eacute;lectionner certains &eacute;l&eacute;ments g&eacute;om&eacute;triques (sommets, ar&ecirc;tes ou faces).</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une cote</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une cote</b> du menu.</li>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Cote</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Cotes &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_Dimension.svg&amp;filetimestamp=20241126214027&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Dimension.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Cote</b> du menu.</li>
 <li>Utilisez le raccourci clavier&nbsp;: <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">D</span>.</li></ul></li>
 <li>Le curseur se transforme en croix avec l'ic&ocirc;ne de l'outil.</li>
 <li>Si vous n'avez pas encore s&eacute;lectionn&eacute; d'&eacute;l&eacute;ment&nbsp;: s&eacute;lectionnez-en un.</li>
@@ -74,7 +73,6 @@
 <li>Une cote est ajout&eacute;e.</li>
 <li>Cet outil fonctionne en mode continu&nbsp;: il est possible de continuer &agrave; cr&eacute;er des cotes.</li></ol></li>
 <li>Pour terminer, cliquez avec le bouton droit de la souris ou appuyez sur <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">&Eacute;chap</span>.</li></ul></li></ol>
-</div>
 <p><span id="Limitations"></span>
 </p>
 <h2><span class="mw-headline" id="Limitations">Limitations</span></h2>
@@ -126,34 +124,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124103815
+Cached time: 20260124103909
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 372/1000000
-Post&#8208;expand include size: 26274/2097152 bytes
-Template argument size: 10232/2097152 bytes
+CPU time usage: 0.066 seconds
+Real time usage: 0.090 seconds
+Preprocessor visited node count: 371/1000000
+Post&#8208;expand include size: 26248/2097152 bytes
+Template argument size: 10206/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1352/5000000 bytes
+Unstrip post&#8208;expand size: 1356/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   26.174      1 -total
- 30.05%    7.866      1 Template:TechDraw_Tools_navi/fr
- 26.03%    6.814      2 Template:Navigation_menu_2
- 22.32%    5.841      1 Template:GuiCommand/fr
- 17.20%    4.503      1 Template:Userdocnavi/fr
- 10.08%    2.639      2 Template:Docnav/fr
-  9.07%    2.373      1 Template:MenuCommand
-  8.01%    2.096      1 Template:Button
-  7.66%    2.005      4 Template:KEY
+100.00%   15.940      1 -total
+ 34.39%    5.482      1 Template:TechDraw_Tools_navi/fr
+ 27.54%    4.390      2 Template:Navigation_menu_2
+ 19.32%    3.080      1 Template:GuiCommand/fr
+ 15.74%    2.509      1 Template:Userdocnavi/fr
+ 13.08%    2.084      2 Template:Docnav/fr
+  7.51%    1.197      1 Template:Button
+  7.02%    1.119      4 Template:KEY
+  6.04%    0.962      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260124103815 and revision id 1743277. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260124103909 and revision id 1743279. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
