--- a/wiki/fr/TechDraw_Dimension.html
+++ b/wiki/fr/TechDraw_Dimension.html
@@ -52,7 +52,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Cote</b> est l'&eacute;quivalent TechDraw de l'outil <a href="../fr/Sketcher_Dimension.html" title="Sketcher Dimension/fr">Sketcher Dimension</a>. Il offre un dimensionnement contextuel et peut donc remplacer la plupart des autres <a href="../fr/TechDraw_Workbench.html#Cotes" title="TechDraw Workbench/fr">outils de cote</a>.
+<p>L'outil <b>TechDraw Cote</b> est l'&eacute;quivalent TechDraw de l'outil <a href="../fr/Sketcher_Dimension.html" title="Sketcher Dimension/fr">Sketcher Dimension</a>. Il offre une cotation contextuelle et peut donc remplacer la plupart des autres <a href="../fr/TechDraw_Workbench.html#Cotes" title="TechDraw Workbench/fr">outils de cote</a>.
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -124,12 +124,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124103915
+Cached time: 20260124104129
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.084 seconds
+CPU time usage: 0.076 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 371/1000000
 Post&#8208;expand include size: 26248/2097152 bytes
 Template argument size: 10206/2097152 bytes
@@ -140,18 +140,18 @@ Unstrip post&#8208;expand size: 1356/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.911      1 -total
- 33.45%    5.323      1 Template:TechDraw_Tools_navi/fr
- 28.36%    4.513      2 Template:Navigation_menu_2
- 20.04%    3.188      1 Template:Userdocnavi/fr
- 18.38%    2.925      1 Template:GuiCommand/fr
- 12.65%    2.012      2 Template:Docnav/fr
-  6.23%    0.992      4 Template:KEY
-  6.07%    0.966      1 Template:MenuCommand
-  5.43%    0.864      1 Template:Button
+100.00%   26.550      1 -total
+ 27.78%    7.376      1 Template:TechDraw_Tools_navi/fr
+ 24.77%    6.577      1 Template:GuiCommand/fr
+ 21.43%    5.690      2 Template:Navigation_menu_2
+ 16.14%    4.286      1 Template:Userdocnavi/fr
+ 11.38%    3.022      2 Template:Docnav/fr
+  9.73%    2.582      4 Template:KEY
+  9.34%    2.479      1 Template:Button
+  6.82%    1.811      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260124103915 and revision id 1743279. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:360215-0!canonical and timestamp 20260124104128 and revision id 1743281. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
